# agentburn

./: .replit  AI_BOT_INTEGRATION_GUIDE.md  AI_BOT_QUICK_START.md  AI_PROVIDER_SETUP.md  Anchor.toml  BURNBOT_WHITEPAPER.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_FIXES_SUMMARY.md  FEATURES.md  HACKATHON.md  HACKATHON_SUBMISSION.md  LICENSE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_SETUP.md  README.md  SECURITY_DOCUMENTATION.md  TECHNICAL_NOTES.md  VIDEO_DEMO_SCRIPT.md  WALLET_INTEGRATION_GUIDE.md  design_guidelines.md  package-lock.json  package.json  replit.md  test-e2e-workflow.mjs
attached_assets/: Pasted--Submission-Winning-Tips-Track-Submit-under-Best-x402-Agent-Application-it-s-a-full-app-t-1761786824242_1761786824243.txt  Pasted--features-10-Refused-to-load-the-stylesheet-https-fonts-googleapis-com-css2-family-Inter-wght-40-1761356492173_1761356492174.txt  Pasted-tatus-402-headers-Headers-date-Sat-25-Oct-2025-03-15-17-GMT-content-type--1761362146733_1761362146734.txt
client/: index.html
programs/gigabrain-burn/: Cargo.toml
programs/gigabrain-burn/src/: lib.rs
scripts/: deploy.sh  initialize.js  x402-agent.js
server/: agentic-burn-service.ts  ai-bot-scheduler.ts  bundle-detection.ts  check-wallet-tokens.ts  close-all-positions.ts  crypto.ts  db.ts  grok-analysis.ts  hivemind-strategy.ts  index.ts  jito-bam-service.ts  jupiter-token-discovery.ts  jupiter.ts  key-manager.ts  multi-strategy.ts  performance-tracker.ts  pumpfun-alternative.ts  pumpfun-api.ts  pumpfun.ts  realtime.ts  (+11 more)
(+29 files in other folders)
